--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,17 @@
+1.7.5 2015-07-28
+
+    * fixed issue with error metrics parsing
+
+1.7.3 2015-06-15
+
+    * basic support for NextSeq and multi-camera flowcell reads
+    * fixed logic bug when loading QMetricsOut.bin v5 
+
+1.7.2 2015-02-05
+
+    * bug fixes
+    * better handling of truncated InterOp files
+
 1.5.4 2015-02-05
 
   General
